--- a/src/component/Movies.css
+++ b/src/component/Movies.css
@@ -1,5 +1,19 @@
-.Movies {
-    max-width: 60%;
-    margin-top: 4vh;
-    margin-left: 1vw;
+.selected-text{
+    font-size: 150%;
+}
+
+.loading-parent-div {
+    margin-top:auto;
+    margin-bottom:auto;
+    text-align:center;
+    align-items: center;
+}
+
+.loading-div-align-center {
+    margin-left: 47%;
+    margin-top: 20%;
+}
+
+.loading-text {
+    margin-top: 5%;
 }
